# cppcheck-clang-tidy-and-cmake

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  app.cpp
libmath/: CMakeLists.txt  libmath.cpp  libmath.hpp
libthirdparty/: CMakeLists.txt  libthirdparty.cpp  libthirdparty.hpp
